Bug 75549 - Ubuntu window title bars corrupted
Summary: Ubuntu window title bars corrupted
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-26 22:28 UTC by Cory Bloor
Modified: 2014-02-27 08:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Note the corruption of the title bars (1.26 MB, image/png)
2014-02-26 22:28 UTC, Cory Bloor
no flags Details

Description Cory Bloor 2014-02-26 22:28:36 UTC
Created attachment 94785 [details]
Note the corruption of the title bars

I got a mesa update from the oibaf-ppa last night, and when I rebooted this morning I noticed corruption in the window title bars that wasn't there before. 

I'm running Ubuntu 13.10 /w linux 3.13.2-031302-generic on a MacBook Pro (late-2013; model 11,2)
My OpenGL version vendor string is Mesa 10.2.0-devel (git-9855477 saucy-oibaf-ppa)


Here are the update package set I installed last night:

Start-Date: 2014-02-26  00:02:06
Commandline: aptdaemon role='role-commit-packages' sender=':1.96'
Upgrade: libgl1-mesa-dev:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), libgnutls-openssl27:amd64 (2.12.23-1ubuntu4, 2.12.23-1ubuntu4.1), libegl1-mesa:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), libopenvg1-mesa:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), libegl1-mesa-drivers:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), dropbox:amd64 (1.6.0, 1.6.1), libgl1-mesa-dri:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), libglapi-mesa:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), libgles2-mesa:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), libgl1-mesa-glx:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), xserver-xorg-video-intel:amd64 (2.99.910+git1402210730.0b92b1~gd~s, 2.99.910+git1402231930.ff4994~gd~s), xserver-xorg-video-ati:amd64 (7.3+git1402220730.cadb6b~gd~s, 7.3+git1402250730.ea6d0a~gd~s), libgnutls26:amd64 (2.12.23-1ubuntu4, 2.12.23-1ubuntu4.1), libgbm1:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s), xserver-xorg-video-radeon:amd64 (7.3+git1402220730.cadb6b~gd~s, 7.3+git1402250730.ea6d0a~gd~s), mesa-common-dev:amd64 (10.2~git1402211930.941769~gd~s, 10.2~git1402251930.985547~gd~s)
End-Date: 2014-02-26  00:02:25


Here is the update that installed the previous (corruption-free) mesa packages:

Start-Date: 2014-02-22  00:07:10
Commandline: aptdaemon role='role-commit-packages' sender=':1.86'
Upgrade: libgl1-mesa-dev:amd64 (10.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), lib
egl1-mesa:amd64 (10.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), libopenvg1-mesa:am
d64 (10.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), libegl1-mesa-drivers:amd64 (10
.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), libgl1-mesa-dri:amd64 (10.2~git140219
1930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), libglapi-mesa:amd64 (10.2~git1402191930.9186cd~gd
~s, 10.2~git1402211930.941769~gd~s), flashplugin-installer:amd64 (11.2.202.336ubuntu0.13.10.1, 11.2.
202.341ubuntu0.13.10.1), libgles2-mesa:amd64 (10.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941
769~gd~s), libgl1-mesa-glx:amd64 (10.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), x
server-xorg-video-intel:amd64 (2.99.910+git1402190730.c91af5~gd~s, 2.99.910+git1402210730.0b92b1~gd~
s), xserver-xorg-video-ati:amd64 (7.3+git1401241930.8de6f7~gd~s, 7.3+git1402220730.cadb6b~gd~s), lib
gbm1:amd64 (10.2~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s), xserver-xorg-video-rade
on:amd64 (7.3+git1401241930.8de6f7~gd~s, 7.3+git1402220730.cadb6b~gd~s), mesa-common-dev:amd64 (10.2
~git1402191930.9186cd~gd~s, 10.2~git1402211930.941769~gd~s)
End-Date: 2014-02-22  00:07:52

I filed the bug under "Other" because I wasn't sure what category it went under.

I'm not very familiar with debugging graphics problems, but if there's anything I can do to help, please let me know.
Comment 1 Rui Salvaterra 2014-02-27 00:37:29 UTC
I can confirm it happening on Ironlake, Ivybridge and Haswell, but not on NVAC (nouveau), pretty sure it's i965 related.
Comment 2 Armin K 2014-02-27 03:43:21 UTC
I've seen something similar with xf86-video-intel-2.99.909 release where SNA had few rendering issues, but those were fixed in 2.99.910. Since the latest non-working upgrade also includes xf86-video-intel, can you confirm it's not a SNA issue again by switching to UXA?
Comment 3 Cory Bloor 2014-02-27 05:33:14 UTC
The title bars appear to be corruption-free under uxa.

For my future self looking to undo this and/or googlers looking for a workaround, I switched by creating /etc/X11/xorg.conf with this content:

Section "Device"
        Identifier "intel"
        Driver "intel"
        Option "AccelMethod" "uxa"
EndSection
Comment 4 Chris Wilson 2014-02-27 08:41:23 UTC
commit 27ac9f574f65cbd535751c925e9b2e2d7c8a6b3a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Feb 27 08:33:52 2014 +0000

    sna: Avoid promoting region-to-whole migration and discarding damage
    
    Fixes regression from
    commit 1de1104064b5898cbed37e836901694a381c1266
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Fri Feb 21 22:43:04 2014 +0000
    
        sna: Use a hint to do whole image uploads inplace
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75549
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.